@@ -1,7 +1,7 @@
 buildscript {
     ext {
         group "ksbysample"
-        version "2.2.7-RELEASE"
+        version "2.5.5"
     }
     repositories {
         mavenCentral()
@@ -15,52 +15,55 @@ buildscript {
 
 plugins {
     id "java"
+    id "groovy"
     id "eclipse"
     id "idea"
-    id "org.springframework.boot" version "2.2.7.RELEASE"
-    id "io.spring.dependency-management" version "1.0.9.RELEASE"
-    id "groovy"
-    id "net.ltgt.errorprone" version "1.1.1"
+    id "org.springframework.boot" version "2.5.5"
+    id "io.spring.dependency-management" version "1.0.11.RELEASE"
+    id "net.ltgt.errorprone" version "2.0.2"
     id "checkstyle"
-    id "com.github.spotbugs" version "4.0.8"
+    id "com.github.spotbugs" version "4.7.7"
     id "pmd"
-    id "com.moowork.node" version "1.3.1"
-    id "com.gorylenko.gradle-git-properties" version "2.2.2"
-// Gradle 5.3 で internal API が変更されて gradle-processes が動かなくなったのでコメントアウトする
-//    id "com.github.johnrengelman.processes" version "0.5.0"
-    id "com.energizedwork.webdriver-binaries" version "1.4"
-    id "org.seasar.doma.codegen" version "0.0.2"
+    id "com.github.node-gradle.node" version "3.1.1"
+    id "com.gorylenko.gradle-git-properties" version "2.3.1"
+// Java 17 で build タスクを実行すると java.lang.reflect.InvocationTargetException が発生し、
+// 対応方法が不明なのでコメントアウトする
+//    id "com.github.erdi.webdriver-binaries" version "2.6"
+    id "org.seasar.doma.codegen" version "1.4.1"
 }
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 wrapper {
-    gradleVersion = "6.4"
+    gradleVersion = "7.2"
     distributionType = Wrapper.DistributionType.ALL
 }
 
 [compileJava, compileTestGroovy, compileTestJava]*.options*.encoding = "UTF-8"
 [compileJava, compileTestGroovy, compileTestJava]*.options*.compilerArgs = ["-Xlint:all,-options,-processing,-path"]
+tasks.withType(JavaCompile).configureEach {
+    options.errorprone {
+        disableWarningsInGeneratedCode = true
+        disable("SameNameButDifferent")
+    }
+}
 tasks.named("compileTestJava").configure {
     options.errorprone.enabled = false
 }
-// --add-opens オプションを複数指定するとエラーが出るのでコメントアウトする
-// https://github.com/gradle/gradle/issues/7045
-// のクローズ待ち？
-//compileTestGroovy {
-//    options.forkOptions.jvmArgs += [
-//            "--add-opens", "java.base/java.util=ALL-UNNAMED",
-//            "--add-opens", "java.base/java.lang.annotation=ALL-UNNAMED"
-//    ]
-//}
+bootJar {
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
+jar {
+    enabled = false
+}
 
 // for Doma 2
 // Copy the resources referred by the Doma annotation processors to
 // the destinationDir of the compileJava task
 task copyDomaResources(type: Sync) {
     from sourceSets.main.resources.srcDirs
-    into compileJava.destinationDir
+    into compileJava.destinationDirectory
     include "doma.compile.config"
     include "META-INF/**/*.sql"
     include "META-INF/**/*.script"
@@ -79,10 +82,7 @@ idea {
 }
 
 configurations {
-    developmentOnly
-    runtimeClasspath {
-        extendsFrom developmentOnly
-    }
+    compileOnly.extendsFrom annotationProcessor
 
     // annotationProcessor と testAnnotationProcessor、compileOnly と testCompileOnly を併記不要にする
     testAnnotationProcessor.extendsFrom annotationProcessor
@@ -94,26 +94,26 @@ configurations {
 
 checkstyle {
     configFile = file("${rootProject.projectDir}/config/checkstyle/google_checks.xml")
-    toolVersion = "8.32"
+    toolVersion = "9.0.1"
     sourceSets = [project.sourceSets.main]
 }
 
 spotbugs {
+    toolVersion = "${spotbugs.toolVersion.get()}"
     ignoreFailures = true
-    toolVersion = "4.0.2"
     spotbugsTest.enabled = false
+    excludeFilter = file("${rootProject.projectDir}/config/spotbugs/exclude.xml")
 }
 spotbugsMain {
     reports {
         html {
             enabled = true
-            stylesheet = "color.xsl"
         }
     }
 }
 
 pmd {
-    toolVersion = "6.23.0"
+    toolVersion = "6.39.0"
     sourceSets = [project.sourceSets.main]
     ignoreFailures = true
     consoleOutput = true
@@ -131,23 +131,24 @@ dependencyManagement {
         // https://repo.spring.io/release/org/springframework/boot/spring-boot-starter-parent/2.1.4.RELEASE/
         // bomProperty に指定可能な property は以下の URL の BOM に記述がある
         // https://repo.spring.io/release/org/springframework/boot/spring-boot-dependencies/2.1.4.RELEASE/spring-boot-dependencies-2.1.4.RELEASE.pom
-        mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
-        mavenBom("org.junit:junit-bom:5.6.2")
+        mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
+        mavenBom("org.junit:junit-bom:5.8.1")
     }
 }
 
 dependencies {
-    def spockVersion = "1.3-groovy-2.5"
-    def domaVersion = "2.34.0"
-    def lombokVersion = "1.18.12"
-    def errorproneVersion = "2.3.4"
-    def powermockVersion = "2.0.7"
+    def spockVersion = "2.0-groovy-3.0"
+    def lombokVersion = "1.18.20"
+    def domaVersion = "2.49.0"
+    def errorproneVersion = "2.9.0"
     def seleniumVersion = "3.141.59"
-    def spotbugsVersion = "4.0.2"
 
     // dependency-management-plugin によりバージョン番号が自動で設定されるもの
     // Appendix F. Dependency versions ( https://docs.spring.io/spring-boot/docs/2.1.4.RELEASE/reference/html/appendix-dependency-versions.html ) 参照
-    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-web") {
+        exclude group: "junit", module: "junit"
+    }
+    implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-freemarker")
@@ -163,20 +164,25 @@ dependencies {
     }
     testImplementation("org.springframework.security:spring-security-test")
     testImplementation("org.yaml:snakeyaml")
+    testImplementation("org.codehaus.groovy:groovy-sql")
+    testImplementation("org.mockito:mockito-inline")
 
     // dependency-management-plugin によりバージョン番号が自動で設定されないもの、あるいは最新バージョンを指定したいもの
     implementation("com.integralblue:log4jdbc-spring-boot-starter:2.0.0")
-    implementation("org.flywaydb:flyway-core:5.2.4")
+    implementation("org.flywaydb:flyway-core:7.14.1")
     implementation("com.h2database:h2:1.4.200")
     implementation("com.github.rozidan:modelmapper-spring-boot-starter:2.3.1")
-    implementation("com.google.guava:guava:27.1-jre")
-    implementation("org.apache.commons:commons-lang3:3.8.1")
-    testImplementation("org.dbunit:dbunit:2.7.0")
-    testImplementation("org.assertj:assertj-core:3.16.0")
+    implementation("org.modelmapper:modelmapper:2.4.4")
+    implementation("com.google.guava:guava:31.0.1-jre")
+    implementation("org.apache.commons:commons-lang3:3.12.0")
+    testImplementation("org.dbunit:dbunit:2.7.2")
+    testImplementation("org.assertj:assertj-core:3.21.0")
     testImplementation("org.spockframework:spock-core:${spockVersion}")
     testImplementation("org.spockframework:spock-spring:${spockVersion}")
-    testImplementation("org.jsoup:jsoup:1.13.1")
-    testImplementation("com.icegreen:greenmail:1.5.13")
+    testImplementation("org.jsoup:jsoup:1.14.3")
+    testImplementation("com.icegreen:greenmail:1.6.5") {
+        exclude group: "junit", module: "junit"
+    }
 
     // for lombok
     annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
@@ -190,57 +196,27 @@ dependencies {
     errorprone("com.google.errorprone:error_prone_core:${errorproneVersion}")
     compileOnly("com.google.errorprone:error_prone_annotations:${errorproneVersion}")
 
-    // PowerMock
-    testImplementation("org.powermock:powermock-module-junit4:${powermockVersion}")
-    testImplementation("org.powermock:powermock-api-mockito2:${powermockVersion}")
-
     // for Geb + Spock
-    testImplementation("org.gebish:geb-spock:3.4") {
-        exclude group: "org.codehaus.groovy", module: "groovy-all"
-    }
+    testImplementation("org.gebish:geb-spock:5.0")
     testImplementation("org.seleniumhq.selenium:selenium-chrome-driver:${seleniumVersion}")
     testImplementation("org.seleniumhq.selenium:selenium-firefox-driver:${seleniumVersion}")
     testImplementation("org.seleniumhq.selenium:selenium-support:${seleniumVersion}")
-    testImplementation("org.seleniumhq.selenium:selenium-api:${seleniumVersion}")
-    testImplementation("org.seleniumhq.selenium:selenium-remote-driver:${seleniumVersion}")
 
     // for SpotBugs
-    compileOnly("com.github.spotbugs:spotbugs:${spotbugsVersion}")
-    compileOnly("net.jcip:jcip-annotations:1.0")
-    compileOnly("com.github.spotbugs:spotbugs-annotations:${spotbugsVersion}")
-    testImplementation("com.google.code.findbugs:jsr305:3.0.2")
-    spotbugsStylesheets("com.github.spotbugs:spotbugs:${spotbugsVersion}")
-    spotbugsPlugins("com.h3xstream.findsecbugs:findsecbugs-plugin:1.10.1")
+    spotbugs(configurations.spotbugsPlugins.dependencies)
+    annotationProcessor("com.github.spotbugs:spotbugs-annotations:${spotbugs.toolVersion.get()}")
+    spotbugsPlugins("com.h3xstream.findsecbugs:findsecbugs-plugin:1.11.0")
 
     // for JUnit 5
     // junit-jupiter で junit-jupiter-api, junit-jupiter-params, junit-jupiter-engine の３つが依存関係に追加される
-    testCompile("org.junit.jupiter:junit-jupiter")
-    testRuntime("org.junit.platform:junit-platform-launcher")
+    testImplementation("org.junit.jupiter:junit-jupiter")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 def jvmArgsForTask = [
         "-ea",
         "-Dfile.encoding=UTF-8",
         "-Dsun.nio.cs.map=x-windows-iso2022jp/ISO-2022-JP"
-]
-// JDK 11 に変更後、test タスク実行時に groovy と powermock が JDKの内部部分にアクセスするためにコードでリフレクションを使用
-// していて WARNING が出るため、JVM の起動時オプションの --add-opens を指定して WARNING が出ないようにする
-def jvmArgsAddOpens = [
-        "--add-opens=java.base/java.io=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-        "--add-opens=java.base/java.math=ALL-UNNAMED",
-        "--add-opens=java.base/java.net=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
-        "--add-opens=java.base/java.security=ALL-UNNAMED",
-        "--add-opens=java.base/java.time=ALL-UNNAMED",
-        "--add-opens=java.base/java.util=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.function=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.regex=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.stream=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.beans=ALL-UNNAMED"
 ]
 def printTestCount = { desc, result ->
     if (!desc.parent) { // will match the outermost suite
@@ -250,29 +226,29 @@ def printTestCount = { desc, result ->
 
 bootRun {
     jvmArgs = jvmArgsForTask +
-            jvmArgsAddOpens +
             [
                     "-Dspring.profiles.active=develop",
                     "-XX:TieredStopAtLevel=1"
             ]
 }
 
-tasks.withType(Test) {
-    jvmArgs = jvmArgsForTask +
-            jvmArgsAddOpens +
-            ["-Dspring.profiles.active=unittest"]
-}
-task testJUnit4AndSpock(type: Test) {
-    // testJUnit4AndSpock タスクの jvmArgs は tasks.withType(Test) { ... } で定義している
-    exclude "geb/**"
-
-    testLogging {
-        afterSuite printTestCount
+clean {
+    doLast {
+        rootProject.file("out").deleteDir()
+        rootProject.file("src/main/generated").deleteDir()
+        rootProject.file("src/test/generated_tests").deleteDir()
     }
 }
-test.dependsOn testJUnit4AndSpock
+
+tasks.withType(Test) {
+    jvmArgs = jvmArgsForTask +
+            ["-Dspring.profiles.active=unittest"]
+}
 test {
     // test タスクの jvmArgs は tasks.withType(Test) { ... } で定義している
+
+    // Geb のテストを test タスクで実行されないようにする
+    exclude "geb/**"
 
     // for JUnit 5
     useJUnitPlatform()
@@ -282,47 +258,29 @@ test {
     }
 }
 
-//task npmTest(type: NpmTask) {
-//    args = ["test"]
-//}
-task npmTest(type: Exec) {
-    commandLine "cmd", "/c", "npm test >NUL 2>&1"
+task npmTest(type: NpmTask) {
+    args = ["test"]
 }
-task npmBuild(type: Exec) {
-    commandLine "cmd", "/c", "npm run build >NUL 2>&1"
+task npmBuild(type: NpmTask) {
+    args = ["run", "build"]
 }
 npmBuild.dependsOn npmTest
 processResources.dependsOn npmBuild
 
-// Gradle 5.3 で internal API が変更されて gradle-processes が動かなくなったのでコメントアウトする
-//// for Geb + Spock Integration Test
-//task startServer(type: com.github.jengelman.gradle.plugins.processes.tasks.JavaFork) {
-//    jvmArgs = [
-//            "-Dspring.profiles.active=develop",
-//            "-Dlogging.level.root=OFF",
-//            "-Dlogging.level.org.springframework.web=OFF",
-//            "-Dlogging.level.jdbc.sqlonly=OFF",
-//            "-Dlogging.level.jdbc.sqltiming=OFF",
-//            "-Dlogging.level.jdbc.audit=OFF",
-//            "-Dlogging.level.jdbc.resultset=OFF",
-//            "-Dlogging.level.jdbc.resultsettable=OFF",
-//            "-Dlogging.level.jdbc.connection=OFF"
-//    ]
-//    classpath += sourceSets.main.runtimeClasspath
-//    main = "${mainClass}"
-//    doLast {
-//        Thread.sleep(15000)
+// Java 17 で build タスクを実行すると java.lang.reflect.InvocationTargetException が発生し、
+// 対応方法が不明なのでコメントアウトする
+//// https://github.com/webdriverextensions/webdriverextensions-maven-plugin-repository/blob/master/repository-3.0.json 参照
+//webdriverBinaries {
+//    chromedriver {
+//        version = "94.0.4606.41"
+//        architecture = "X86"
+//        fallbackTo32Bit = true
+//    }
+//    geckodriver {
+//        version = "0.29.1"
+//        architecture = "X86_64"
 //    }
 //}
-//task stopServer {
-//    doLast {
-//        startServer.processHandle.abort()
-//    }
-//}
-webdriverBinaries {
-    chromedriver "81.0.4044.69"
-    geckodriver "0.26.0"
-}
 def drivers = ["chrome", "firefox"]
 drivers.each { driver ->
     task "${driver}Test"(type: Test) {
@@ -330,9 +288,9 @@ drivers.each { driver ->
         outputs.upToDateWhen { false }
         systemProperty "geb.env", driver
         exclude "ksbysample/**"
-// Gradle 5.3 で internal API が変更されて gradle-processes が動かなくなったのでコメントアウトする
-//        dependsOn startServer
-//        finalizedBy stopServer
+
+        // for JUnit 5
+        useJUnitPlatform()
 
         testLogging {
             afterSuite printTestCount
